--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -46,7 +46,8 @@
   <footer>
     &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
   </footer>
-<!-- // TODO: Include any/all needed script tags -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script type="text/javascript" src="blogArticles.js"></script>
+<script type="text/javascript" src="article.js"></script>
 </body>
 </html>
