--- a/jim-and-mike/starter-code/index.html
+++ b/jim-and-mike/starter-code/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules.css">
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="vendor/scripts/jquery-3.2.1.min.js"></script>
 </head>
 <body>
   <header class="site-header clearfix">
@@ -47,7 +47,7 @@
   <footer>
     &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
   </footer>
-  <script src="blogArticles.js" type="text/javascript"></script>
-  <script src="article.js" type="text/javascript"></script>
+  <script src="scripts/blogArticles.js" type="text/javascript"></script>
+  <script src="scripts/article.js" type="text/javascript"></script>
 </body>
 </html>
