--- a/bret-brandon/starter-code/index.html
+++ b/bret-brandon/starter-code/index.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules.css">
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+  crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="site-header clearfix">
@@ -46,8 +50,7 @@
   <footer>
     &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
   </footer>
-<!-- // TODO: Include any/all needed script tags -->
-<script type="text/javascript" src="scripts/article.js"></script>
 <script type="text/javascript" src="scripts/blogArticles.js"></script>
+<script type="text/javascript" src="scripts/article.js"></script>
 </body>
 </html>
