--- a/james/index.html
+++ b/james/index.html
@@ -46,6 +46,11 @@
   <footer>
     &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
   </footer>
+  <script type="text/javascript" src="scripts/blogArticles.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <script type="text/javascript" src="scripts/article.js"></script>
 </body>
 </html>
